@@ -248,6 +248,7 @@ void wxPli_doublearray_push( pTHX_ const wxArrayDouble& doubles );
 AV* wxPli_stringarray_2_av( pTHX_ const wxArrayString& strings );
 AV* wxPli_uchararray_2_av( pTHX_ const unsigned char* array, int count );
 AV* FUNCPTR( wxPli_objlist_2_av )( pTHX_ const wxList& objs );
+void FUNCPTR( wxPli_objlist_push )( pTHX_ const wxList& objs );
 
 template<class A, class E>
 void wxPli_nonobjarray_push( pTHX_ const A& objs, const char* klass )
@@ -456,6 +457,7 @@ struct wxPliHelpers
     int (* m_wxPli_av_2_arrayint )( pTHX_ SV* avref, wxArrayInt* array );
     void (* m_wxPli_set_events )( const wxPliEventDescription* events );
     int (* m_wxPli_av_2_arraystring )( pTHX_ SV* avref, wxArrayString* array );
+    void (* m_wxPli_objlist_push )( pTHX_ const wxList& objs );
 };
 
 #if wxPERL_USE_THREADS
@@ -486,7 +488,8 @@ wxPliHelpers name = { &wxPli_sv_2_object, \
  &wxPli_match_arguments_skipfirst, &wxPli_objlist_2_av, &wxPli_intarray_push, \
  &wxPli_clientdatacontainer_2_sv, \
  wxDEFINE_PLI_HELPER_THREADS() \
- &wxPli_av_2_arrayint, &wxPli_set_events, &wxPli_av_2_arraystring \
+ &wxPli_av_2_arrayint, &wxPli_set_events, &wxPli_av_2_arraystring, \
+ &wxPli_objlist_push \
  }
 
 #if defined( WXPL_EXT ) && !defined( WXPL_STATIC ) && !defined(__WXMAC__)
@@ -527,6 +530,7 @@ wxPliHelpers name = { &wxPli_sv_2_object, \
   wxPli_av_2_arrayint = name->m_wxPli_av_2_arrayint; \
   wxPli_set_events = name->m_wxPli_set_events; \
   wxPli_av_2_arraystring = name->m_wxPli_av_2_arraystring; \
+  wxPli_objlist_push = name->m_wxPli_objlist_push; \
   WXPLI_INIT_CLASSINFO();
 
 #else
