@@ -5,7 +5,7 @@
 // Modified by:
 // Created:     11/09/2002
 // RCS-ID:      $Id$
-// Copyright:   (c) 2002, 2004 Simon Flack
+// Copyright:   (c) 2002, 2004, 2007 Simon Flack
 // Licence:     This program is free software; you can redistribute it and/or
 //              modify it under the same terms as Perl itself
 /////////////////////////////////////////////////////////////////////////////
@@ -31,6 +31,8 @@ INCLUDE: XS/View.xs
 INCLUDE: XS/FileHistory.xs
 INCLUDE: XS/DocParentFrame.xs
 INCLUDE: XS/DocChildFrame.xs
+
+INCLUDE: perl ../../script/wx_xspp.pl -t ../../typemap.xsp XS/CommandProcessor.xsp |
 
 #if wxUSE_MDI_ARCHITECTURE && wxUSE_DOC_VIEW_ARCHITECTURE
 
