@@ -5,7 +5,7 @@
 ## Modified by:
 ## Created:     11/09/2002
 ## RCS-ID:      $Id$
-## Copyright:   (c) 2002-2004 Simon Flack
+## Copyright:   (c) 2002-2004, 2007 Simon Flack
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
 #############################################################################
@@ -16,8 +16,9 @@ use Wx::build::MakeMaker;
 
 wxWriteMakefile( NAME            => 'Wx::DocView',
                  VERSION_FROM    => 'lib/Wx/DocView.pm',
+                 clean        => { FILES => 'cpp/cmdproc.h' },
                  WX_CORE_LIB     => 'core base',
-               );
+                 );
 
 # local variables:
 # mode: cperl
