@@ -5,7 +5,7 @@
 ## Modified by:
 ## Created:     11/09/2002
 ## RCS-ID:      $Id: typemap,v 1.4 2004/12/21 21:12:49 mbarbon Exp $
-## Copyright:   (c) 2002, 2004 Simon Flack
+## Copyright:   (c) 2002, 2004, 2007 Simon Flack
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
 #############################################################################
@@ -23,5 +23,7 @@ wxDocMDIParentFrame *   O_WXOBJECT
 wxMDIParentFrame *      O_WXOBJECT
 wxDocPrintout *         O_WXOBJECT
 wxPrintout *            O_WXOBJECT
-wxCommandProcessor *    O_NON_WXOBJECT
+wxCommand *             O_WXOBJECT_THR
+wxPlCommand *           O_WXOBJECT_THR
+wxCommandProcessor *    O_WXOBJECT_THR
 wxFileHistory *         O_WXOBJECT
